tests/should_fail/terminates/loop_through_default_impl.stderr
error: Mutually recursive functions: when calling `<T as Foo>::f`...
  --> loop_through_default_impl.rs:15:5
   |
15 |     fn f() {
   |     ^^^^^^
   |
note: then `<T as Foo>::f` calls `h`...
  --> loop_through_default_impl.rs:16:9
   |
16 |         h();
   |         ^^^
note: then `h` calls `<i32 as Foo>::g`...
  --> loop_through_default_impl.rs:30:5
   |
30 |     <i32 as Foo>::g();
   |     ^^^^^^^^^^^^^^^^^
note: finally `<i32 as Foo>::g` calls `<T as Foo>::f`.
  --> loop_through_default_impl.rs:24:9
   |
24 |         Self::f();
   |         ^^^^^^^^^

error: aborting due to 1 previous error

